; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_vm_ppc.c_ltop.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_vm_ppc.c_ltop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rtopped = common dso_local global i64 0, align 8
@qfalse = common dso_local global i64 0, align 8
@PPC_LWZ = common dso_local global i32 0, align 4
@R_TOP = common dso_local global i32 0, align 4
@R_OPSTACK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ltop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ltop() #0 {
  %1 = load i64, i64* @rtopped, align 8
  %2 = load i64, i64* @qfalse, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %9

4:                                                ; preds = %0
  %5 = load i32, i32* @PPC_LWZ, align 4
  %6 = load i32, i32* @R_TOP, align 4
  %7 = load i32, i32* @R_OPSTACK, align 4
  %8 = call i32 @InstImm(i32 %5, i32 %6, i32 %7, i32 0)
  br label %9

9:                                                ; preds = %4, %0
  ret void
}

declare dso_local i32 @InstImm(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
